{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 992,
  "lineage": "1ca78ff3-871e-4f99-4d17-7b70ce1e6257",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "api-dev-k8s-cloudhands-online",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:768749700464:loadbalancer/api-dev-k8s-cloudhands-on-4bposg",
            "availability_zones": [
              "eu-west-2a",
              "eu-west-2b",
              "eu-west-2c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": false,
            "dns_name": "api-dev-k8s-cloudhands-on-4bposg-293998933.eu-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "SSL:443",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "api-dev-k8s-cloudhands-on-4bposg",
            "idle_timeout": 300,
            "internal": false,
            "listener": [
              {
                "instance_port": 443,
                "instance_protocol": "TCP",
                "lb_port": 443,
                "lb_protocol": "TCP"
              }
            ],
            "name": "api-dev-k8s-cloudhands-on-4bposg",
            "security_groups": [
              "sg-0e5d4aa6a5e9ce8c4",
              "sg-0ea9ab0341d2db4c0"
            ],
            "source_security_group": "768749700464/api-elb.dev-k8s.cloudhands.online",
            "source_security_group_id": "sg-0e5d4aa6a5e9ce8c4",
            "subnets": [
              "subnet-0059d7290f15719d3",
              "subnet-06faa2e1d10c4152d",
              "subnet-0bf21474c285daa90"
            ],
            "tags": {
              "KubernetesCluster": "dev-k8s.cloudhands.online",
              "Name": "api.dev-k8s.cloudhands.online",
              "kubernetes.io/cluster/dev-k8s.cloudhands.online": "owned"
            },
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.api-elb-dev-k8s-cloudhands-online"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "bastion-dev-k8s-cloudhands-online",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:768749700464:loadbalancer/bastion-dev-k8s-cloudhand-o5ahdm",
            "availability_zones": [
              "eu-west-2b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "bastion-dev-k8s-cloudhand-o5ahdm-592591746.eu-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "TCP:22",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "bastion-dev-k8s-cloudhand-o5ahdm",
            "idle_timeout": 300,
            "internal": false,
            "listener": [
              {
                "instance_port": 22,
                "instance_protocol": "TCP",
                "lb_port": 22,
                "lb_protocol": "TCP"
              }
            ],
            "name": "bastion-dev-k8s-cloudhand-o5ahdm",
            "security_groups": [
              "sg-06803b970088249a4"
            ],
            "source_security_group": "768749700464/bastion-elb.dev-k8s.cloudhands.online",
            "source_security_group_id": "sg-06803b970088249a4",
            "subnets": [
              "subnet-06faa2e1d10c4152d"
            ],
            "tags": {
              "KubernetesCluster": "dev-k8s.cloudhands.online",
              "Name": "bastion.dev-k8s.cloudhands.online",
              "kubernetes.io/cluster/dev-k8s.cloudhands.online": "owned"
            },
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.bastion-elb-dev-k8s-cloudhands-online"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api-elb-dev-k8s-cloudhands-online",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:768749700464:security-group/sg-0e5d4aa6a5e9ce8c4",
            "description": "Security group for api ELB",
            "egress": [],
            "id": "sg-0e5d4aa6a5e9ce8c4",
            "ingress": [],
            "name": "api-elb.dev-k8s.cloudhands.online",
            "name_prefix": null,
            "owner_id": "768749700464",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "dev-k8s.cloudhands.online",
              "Name": "api-elb.dev-k8s.cloudhands.online",
              "kubernetes.io/cluster/dev-k8s.cloudhands.online": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5e1479e9a17cba6"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-dev-k8s-cloudhands-online",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:768749700464:security-group/sg-0375e611c9addd691",
            "description": "Security group for bastion",
            "egress": [],
            "id": "sg-0375e611c9addd691",
            "ingress": [],
            "name": "bastion.dev-k8s.cloudhands.online",
            "name_prefix": null,
            "owner_id": "768749700464",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "dev-k8s.cloudhands.online",
              "Name": "bastion.dev-k8s.cloudhands.online",
              "kubernetes.io/cluster/dev-k8s.cloudhands.online": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5e1479e9a17cba6"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-elb-dev-k8s-cloudhands-online",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:768749700464:security-group/sg-06803b970088249a4",
            "description": "Security group for bastion ELB",
            "egress": [],
            "id": "sg-06803b970088249a4",
            "ingress": [],
            "name": "bastion-elb.dev-k8s.cloudhands.online",
            "name_prefix": null,
            "owner_id": "768749700464",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "dev-k8s.cloudhands.online",
              "Name": "bastion-elb.dev-k8s.cloudhands.online",
              "kubernetes.io/cluster/dev-k8s.cloudhands.online": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5e1479e9a17cba6"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "masters-dev-k8s-cloudhands-online",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:768749700464:security-group/sg-00694f8233eda77d3",
            "description": "Security group for masters",
            "egress": [],
            "id": "sg-00694f8233eda77d3",
            "ingress": [],
            "name": "masters.dev-k8s.cloudhands.online",
            "name_prefix": null,
            "owner_id": "768749700464",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "dev-k8s.cloudhands.online",
              "Name": "masters.dev-k8s.cloudhands.online",
              "kubernetes.io/cluster/dev-k8s.cloudhands.online": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5e1479e9a17cba6"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes-dev-k8s-cloudhands-online",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:768749700464:security-group/sg-0bdff705c2d3c7cd1",
            "description": "Security group for nodes",
            "egress": [],
            "id": "sg-0bdff705c2d3c7cd1",
            "ingress": [],
            "name": "nodes.dev-k8s.cloudhands.online",
            "name_prefix": null,
            "owner_id": "768749700464",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "dev-k8s.cloudhands.online",
              "Name": "nodes.dev-k8s.cloudhands.online",
              "kubernetes.io/cluster/dev-k8s.cloudhands.online": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5e1479e9a17cba6"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all-master-to-master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-261480184",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00694f8233eda77d3",
            "self": false,
            "source_security_group_id": "sg-00694f8233eda77d3",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-dev-k8s-cloudhands-online"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all-master-to-node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-792995538",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bdff705c2d3c7cd1",
            "self": false,
            "source_security_group_id": "sg-00694f8233eda77d3",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-dev-k8s-cloudhands-online",
            "aws_security_group.nodes-dev-k8s-cloudhands-online"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all-node-to-node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-1388974937",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bdff705c2d3c7cd1",
            "self": false,
            "source_security_group_id": "sg-0bdff705c2d3c7cd1",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.nodes-dev-k8s-cloudhands-online"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "api-elb-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1316124736",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e5d4aa6a5e9ce8c4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.api-elb-dev-k8s-cloudhands-online"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-176494883",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0375e611c9addd691",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.bastion-dev-k8s-cloudhands-online"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion-elb-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-726836130",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06803b970088249a4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.bastion-elb-dev-k8s-cloudhands-online"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion-to-master-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-330698008",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00694f8233eda77d3",
            "self": false,
            "source_security_group_id": "sg-0375e611c9addd691",
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.bastion-dev-k8s-cloudhands-online",
            "aws_security_group.masters-dev-k8s-cloudhands-online"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion-to-node-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-2501708137",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bdff705c2d3c7cd1",
            "self": false,
            "source_security_group_id": "sg-0375e611c9addd691",
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.bastion-dev-k8s-cloudhands-online",
            "aws_security_group.nodes-dev-k8s-cloudhands-online"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https-elb-to-master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-341055025",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00694f8233eda77d3",
            "self": false,
            "source_security_group_id": "sg-0e5d4aa6a5e9ce8c4",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.api-elb-dev-k8s-cloudhands-online",
            "aws_security_group.masters-dev-k8s-cloudhands-online"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-879259647",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00694f8233eda77d3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.masters-dev-k8s-cloudhands-online"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3189074802",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bdff705c2d3c7cd1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.nodes-dev-k8s-cloudhands-online"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-tcp-1-2379",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 1,
            "id": "sgrule-215868245",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00694f8233eda77d3",
            "self": false,
            "source_security_group_id": "sg-0bdff705c2d3c7cd1",
            "to_port": 2379,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-dev-k8s-cloudhands-online",
            "aws_security_group.nodes-dev-k8s-cloudhands-online"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-tcp-2382-4000",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2382,
            "id": "sgrule-3655081577",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00694f8233eda77d3",
            "self": false,
            "source_security_group_id": "sg-0bdff705c2d3c7cd1",
            "to_port": 4000,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-dev-k8s-cloudhands-online",
            "aws_security_group.nodes-dev-k8s-cloudhands-online"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-tcp-4003-65535",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4003,
            "id": "sgrule-2820720758",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00694f8233eda77d3",
            "self": false,
            "source_security_group_id": "sg-0bdff705c2d3c7cd1",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-dev-k8s-cloudhands-online",
            "aws_security_group.nodes-dev-k8s-cloudhands-online"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-udp-1-65535",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 1,
            "id": "sgrule-452108348",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-00694f8233eda77d3",
            "self": false,
            "source_security_group_id": "sg-0bdff705c2d3c7cd1",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-dev-k8s-cloudhands-online",
            "aws_security_group.nodes-dev-k8s-cloudhands-online"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh-elb-to-bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-566479179",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0375e611c9addd691",
            "self": false,
            "source_security_group_id": "sg-06803b970088249a4",
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.bastion-dev-k8s-cloudhands-online",
            "aws_security_group.bastion-elb-dev-k8s-cloudhands-online"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh-external-to-bastion-elb-0-0-0-0--0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-607487845",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06803b970088249a4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.bastion-elb-dev-k8s-cloudhands-online"
          ]
        }
      ]
    }
  ]
}